--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,7 @@ jobs:
             - name: Install Dependencies
               run: npm ci
             - name: Run linters
-              uses: wearerequired/lint-action@v2
-              with:
-                eslint: true
-                prettier: true
+              run: npm lint
     Test_Job:
         needs: Build_Job
         runs-on: ubuntu-latest
