--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
             - name: Install Dependencies
               run: npm ci
             - name: Run test
-              uses: npm run test
+              run: npm run test
         
     Deploy_Job:
         needs: Test_Job
